# DecoderTest

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/phicomm/decoder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: PhiDecoder.h  PhiFFmpegDecoder.cpp  PhiMediaScannerClient.cpp  PhiMediaScannerClient.h  decodeframe.cpp  native-lib.cpp
app/src/main/java/com/phicomm/decoder/: DecodeFrameUtil.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/phicomm/decoder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
